# Koshechka-Json

./: CMakeLists.txt  main-sfml_only.cpp  main.cpp
interface/: interface.cpp  interface.hpp  table.hpp  utils.hpp
